<resources>
	<string name="pref_user">User settings</string>
	<string name="pref_user_username_title">BGG username</string>
	<string name="pref_user_username_summary">BoardGameGeek.com username</string>
	<string name="pref_user_username_message">Enter your BoardGameGeek.com username</string>
	<string name="pref_user_password_title">BGG password</string>
	<string name="pref_user_password_summary">BoardGameGeek.com password</string>
	<string name="pref_user_password_message">Enter your BoardGameGeek.com password. Note that
		your password is stored locally, but the only entity we share it with
		is BoardGameGeek. Promise.</string>
	<string name="pref_search">Search settings</string>
	<string name="pref_exactSearch_title">Exact search</string>
	<string name="pref_exactSearch_summary">Disable this to get more search results or do
		partial-name searches</string>
	<string name="pref_skipResults_title">Skip results</string>
	<string name="pref_skipResults_summary">Disable this to stop at the results page even if
		there is only one result</string>
	<string name="pref_general">General settings</string>
	<string name="pref_imageLoad_title">Load images</string>
	<string name="pref_imageLoad_summary">Disable this to improve performance over a slow
		connection</string>
	<string name="pref_log">Logging Plays</string>
	<string name="pref_log_summary">Settings for Logging Plays</string>
	<string name="pref_log_hide_log">Hide Log Play</string>
	<string name="pref_log_hide_log_off">Display the Log Play menu option</string>
	<string name="pref_log_hide_log_on">"Don't display the Log Play menu option"</string>
	<string name="pref_log_hide_quick_log">Hide Quick Log Play</string>
	<string name="pref_log_hide_quick_log_off">Display the Quick Log Play menu option</string>
	<string name="pref_log_hide_quick_log_on">"Don't display the Quick Log Play menu option"</string>
	<string name="pref_log_hide_length">Hide Length</string>
	<string name="pref_log_hide_length_off">Display the play Length</string>
	<string name="pref_log_hide_length_on">"Don't display the play Length"</string>
	<string name="pref_log_hide_location">Hide Location</string>
	<string name="pref_log_hide_location_off">Display the play Location</string>
	<string name="pref_log_hide_location_on">"Don't display the play Location"</string>
	<string name="pref_log_hide_incomplete">Hide Incomplete</string>
	<string name="pref_log_hide_incomplete_off">Display the Incomplete option</string>
	<string name="pref_log_hide_incomplete_on">"Don't display the Incomplete option"</string>
	<string name="pref_log_hide_no_win_stats">"Hide Don't Count Win Stats"</string>
	<string name="pref_log_hide_no_win_stats_off">"Display the Don't Count Win Stats option"</string>
	<string name="pref_log_hide_no_win_stats_on">"Don't the display Don't Count Win Stats option"</string>
	<string name="pref_log_hide_comments">Hide Comments</string>
	<string name="pref_log_hide_comments_off">Display the Comments</string>
	<string name="pref_log_hide_comments_on">"Don't display the Comments"</string>
	<string name="pref_player_settings">Player settings</string>
	<string name="pref_log_hide_players">Hide Player List</string>
	<string name="pref_log_hide_players_off">Display the player list</string>
	<string name="pref_log_hide_players_on">"Don't display the player list"</string>
	<string name="pref_edit_player">Edit Player</string>
	<string name="pref_edit_player_off">"Don't edit the player after adding"</string>
	<string name="pref_edit_player_on">Edit the player after adding</string>
	<string name="pref_log_hide_player_team_color">Hide Team/Color</string>
	<string name="pref_log_hide_player_team_color_off">Display the player Team/Color</string>
	<string name="pref_log_hide_player_team_color_on">"Don't display the player Team/Color"</string>
	<string name="pref_log_hide_player_position">Hide Position</string>
	<string name="pref_log_hide_player_position_off">Display the player Starting Position</string>
	<string name="pref_log_hide_player_position_on">"Don't display the player Starting Position"</string>
	<string name="pref_log_hide_player_score">Hide Score</string>
	<string name="pref_log_hide_player_score_off">Display the player Score</string>
	<string name="pref_log_hide_player_score_on">"Don't display the player Score"</string>
	<string name="pref_log_hide_player_rating">Hide Rating</string>
	<string name="pref_log_hide_player_rating_off">Display the player Rating</string>
	<string name="pref_log_hide_player_rating_on">"Don't display the player Rating"</string>
	<string name="pref_log_hide_player_new">Hide New</string>
	<string name="pref_log_hide_player_new_off">Display the player New option</string>
	<string name="pref_log_hide_player_new_on">"Don't display the player New option"</string>
	<string name="pref_log_hide_player_win">Hide Win</string>
	<string name="pref_sync">Sync settings</string>
	<string name="pref_sync_statuses">Collection statuses</string>
	<string name="pref_sync_buddies">GeekBuddies</string>
	<string name="pref_sync_buddies_summary">Enable to sync GeekBuddies</string>
	<string name="pref_sync_plays">Games Played</string>
	<string name="pref_sync_plays_summary">Enable to sync games played</string>
	<string name="pref_sync_clear">Clear</string>
	<string name="pref_sync_clear_summary">Deletes all synchronized information</string>
	<string name="pref_sync_clear_pos">Clear</string>
	<string name="pref_sync_neg">Cancel</string>
	<string name="pref_sync_clear_info_message">Are you sure you want to clear all synchronized
		information? NOTE: This operation can\'t be reversed.</string>
	<string name="pref_sync_clear_confirm_message">Clear complete!</string>
	<string name="pref_sync_reset_collection">Reset Collection</string>
	<string name="pref_sync_reset_collection_summary">Resets collection so the next sync will be complete</string>
	<string name="pref_sync_reset_plays">Reset Plays</string>
	<string name="pref_sync_reset_plays_summary">Resets plays so the next sync will be complete</string>
	<string name="pref_sync_reset_pos">Reset</string>
	<string name="pref_sync_reset_collection_info_message">Are you sure you want to reset your collection so that the next sync is complete?</string>
	<string name="pref_sync_reset_plays_info_message">Are you sure you want to reset your plays so that the next sync is complete?</string>
	<string name="pref_sync_reset_confirm_message">Reset complete!</string>
	<string name="average_meter_text">Average = %s</string>
	<string name="bayes_meter_text">Bayes Average = %s</string>
	<string name="median_meter_text">Median = %s</string>
	<string name="stdDev_meter_text">Standard Deviation = %s</string>
	<string name="weight_1_text">%s - \"Light\"</string>
	<string name="weight_2_text">%s - \"Medium Light\"</string>
	<string name="weight_3_text">%s - \"Medium\"</string>
	<string name="weight_4_text">%s - \"Medium Heavy\"</string>
	<string name="weight_5_text">%s - \"Heavy\"</string>
	<string name="rating_count">%s ratings</string>
	<string name="weight_count">%s weights</string>
	<string name="user_total">%s users</string>
	<string name="owning_meter_text">%s Owning</string>
	<string name="rating_meter_text">%s Rating</string>
	<string name="trading_meter_text">%s Trading</string>
	<string name="wanting_meter_text">%s Wanting</string>
	<string name="wishing_meter_text">%s Wishing</string>
	<string name="weighting_meter_text">%s Weighting</string>
	<string name="id_list_text">ID: %s</string>
	<string name="designers">Designers</string>
	<string name="artists">Artists</string>
	<string name="publishers">Publishers</string>
	<string name="categories">Categories</string>
	<string name="mechanics">Mechanics</string>
	<string name="expansions">Expansions</string>
	<string name="base_games">Base Games</string>
	<string name="users">Users</string>
	<string name="weight">Weight</string>
	<string name="logPlayDialogTitle">Logging</string>
	<string name="logPlayDialogMessage">Logging play…</string>
	<string name="logInError">Unable to log in, please verify your username and
		password are correct.</string>
	<string name="setUsernamePassword">Please set your username and password.</string>
	<string name="logInErrorSuffixNoResponse">no response</string>
	<string name="logInErrorSuffixBadResponse">received a bad response</string>
	<string name="logInErrorSuffixMissingCookies">cookies are missing</string>
	<string name="logInErrorSuffixBadCookies">cookies are incomplete</string>
	<string name="logPlaySuccess">You just played your %1$s game of %2$s!</string>
	<string name="sync_pending_update">Update pending</string>
	<string name="date">Date</string>
	<string name="quantity">Quantity</string>
	<string name="length">Length</string>
	<string name="location">Location</string>
	<string name="incomplete">Incomplete</string>
	<string name="noWinStats">Don\'t Count Win Stats</string>
	<string name="comments">Comments</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="add">Add</string>
	<string name="home_btn_collection">Collection</string>
	<string name="home_btn_hotness">The Hotness</string>
	<string name="home_btn_forums">Forums</string>
	<string name="home_btn_buddies">Geek Buddies</string>
	<string name="home_btn_sync">Sync</string>
	<string name="home_btn_plays">Games Played</string>
	<string name="home_btn_settings">Settings</string>
	<string name="home_btn_about">About</string>
	<string name="home_btn_contact_us">Contact Us</string>
	<string name="menu_search">Search</string>
	<string name="menu_log_play">Log Play</string>
	<string name="menu_log_play_quick">Quick Log Play</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_links">Links</string>
	<string name="menu_link_bgg">BoardGameGeek</string>
	<string name="menu_link_bg_prices">Board Game Prices</string>
	<string name="menu_link_amazon">Amazon</string>
	<string name="menu_link_ebay">eBay</string>
	<string name="menu_share">Share</string>
	<string name="menu_collection_filter_add">Add Filter…</string>
	<string name="menu_collection_filter_clear">Clear Filters</string>
	<string name="menu_collection_view_save">Save View</string>
	<string name="menu_collection_view_load">Load View</string>
	<string name="menu_collection_view_delete">Delete View</string>
	<string name="menu_collection_status">Collection Status</string>
	<string name="menu_expansion_status">Expansion Status</string>
	<string name="menu_number_of_players">Number of Players</string>
	<string name="menu_collection_sort_name">Name</string>
	<string name="menu_collection_sort_rating">Rating</string>
	<string name="menu_collection_sort_wishlist_priority">Wishlist Priority</string>
	<string name="menu_collection_sort_published_newest">Year Published - Newest</string>
	<string name="menu_collection_sort_published_oldest">Year Published - Oldest</string>
	<string name="menu_collection_sort_playtime_shortest">Play Time - Shortest</string>
	<string name="menu_collection_sort_playtime_longest">Play Time - Longest</string>
	<string name="menu_collection_sort_age_youngest">Suggested Age - Youngest</string>
	<string name="menu_collection_sort_age_oldest">Suggested Age - Oldest</string>
	<string name="menu_collection_sort_weight_heaviest">Average Weight - Heaviest</string>
	<string name="menu_collection_sort_weight_lightest">Average Weight - Lightest</string>
	<string name="menu_play_time">Playing Time</string>
	<string name="menu_suggested_age">Suggested Age</string>
	<string name="menu_geek_ranking">Geek Ranking</string>
	<string name="menu_geek_rating">Geek Rating</string>
	<string name="menu_average_rating">Average Rating</string>
	<string name="menu_average_weight">Average Weight</string>
	<string name="menu_year_published">Year Published</string>
	<string name="menu_collection_random_game">Random Game</string>
	<string name="menu_create_shortcut">Create Shortcut</string>
	<string name="players">players</string>
</resources>