<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_user">
		<EditTextPreference android:key="username"
			android:title="@string/pref_user_username_title"
			android:summary="@string/pref_user_username_summary"
			android:dialogTitle="@string/pref_user_username_title"
			android:dialogMessage="@string/pref_user_username_message" />
		<EditTextPreference android:key="password"
			android:title="@string/pref_user_password_title"
			android:summary="@string/pref_user_password_summary"
			android:dialogTitle="@string/pref_user_password_title"
			android:dialogMessage="@string/pref_user_password_message"
			android:password="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_search">
		<CheckBoxPreference android:key="exactSearch"
			android:defaultValue="true"
			android:title="@string/pref_exactSearch_title"
			android:summary="@string/pref_exactSearch_summary" />
		<CheckBoxPreference android:key="skipResults"
			android:defaultValue="true"
			android:title="@string/pref_skipResults_title"
			android:summary="@string/pref_skipResults_summary" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_general">
		<CheckBoxPreference android:key="imageLoad"
			android:defaultValue="true"
			android:title="@string/pref_imageLoad_title"
			android:summary="@string/pref_imageLoad_summary" />
	</PreferenceCategory>
	<PreferenceScreen android:title="@string/pref_log" android:summary="@string/pref_log_summary">
		<CheckBoxPreference android:key="logHideLog"
			android:title="@string/pref_log_hide_log"
			android:summaryOff="@string/pref_log_hide_log_off"
			android:summaryOn="@string/pref_log_hide_log_on" />
		<CheckBoxPreference android:key="logHideQuickLog"
			android:title="@string/pref_log_hide_quick_log"
			android:summaryOff="@string/pref_log_hide_quick_log_off"
			android:summaryOn="@string/pref_log_hide_quick_log_on" />
		<PreferenceCategory android:title="@string/pref_general">
			<CheckBoxPreference android:key="logHideLength"
				android:title="@string/pref_log_hide_length"
				android:summaryOff="@string/pref_log_hide_length_off"
				android:summaryOn="@string/pref_log_hide_length_on" />
			<CheckBoxPreference android:key="logHideLocation"
				android:title="@string/pref_log_hide_location"
				android:summaryOff="@string/pref_log_hide_location_off"
				android:summaryOn="@string/pref_log_hide_location_on" />
			<CheckBoxPreference android:key="logHideIncomplete"
				android:title="@string/pref_log_hide_incomplete"
				android:summaryOff="@string/pref_log_hide_incomplete_off"
				android:summaryOn="@string/pref_log_hide_incomplete_on" />
			<CheckBoxPreference android:key="logHideNoWinStats"
				android:title="@string/pref_log_hide_no_win_stats"
				android:summaryOff="@string/pref_log_hide_no_win_stats_off"
				android:summaryOn="@string/pref_log_hide_no_win_stats_on" />
			<CheckBoxPreference android:key="logHideComments"
				android:title="@string/pref_log_hide_comments"
				android:summaryOff="@string/pref_log_hide_comments_off"
				android:summaryOn="@string/pref_log_hide_comments_on" />
			<CheckBoxPreference android:key="logHidePlayerList"
				android:disableDependentsState="true"
				android:title="@string/pref_log_hide_players"
				android:summaryOff="@string/pref_log_hide_players_off"
				android:summaryOn="@string/pref_log_hide_players_on" />
		</PreferenceCategory>
		<PreferenceCategory android:title="@string/pref_player_settings">
			<CheckBoxPreference android:key="logEditPlayer"
				android:title="@string/pref_edit_player"
				android:summaryOff="@string/pref_edit_player_off"
				android:summaryOn="@string/pref_edit_player_on" />
			<CheckBoxPreference android:key="logHideTeamColor"
				android:title="@string/pref_log_hide_player_team_color"
				android:summaryOff="@string/pref_log_hide_player_team_color_off"
				android:summaryOn="@string/pref_log_hide_player_team_color_on" />
			<CheckBoxPreference android:key="logHidePosition"
				android:title="@string/pref_log_hide_player_position"
				android:summaryOff="@string/pref_log_hide_player_position_off"
				android:summaryOn="@string/pref_log_hide_player_position_on" />
			<CheckBoxPreference android:key="logHideScore"
				android:title="@string/pref_log_hide_player_score"
				android:summaryOff="@string/pref_log_hide_player_score_off"
				android:summaryOn="@string/pref_log_hide_player_score_on" />
			<CheckBoxPreference android:key="logHideRating"
				android:title="@string/pref_log_hide_player_rating"
				android:summaryOff="@string/pref_log_hide_player_rating_off"
				android:summaryOn="@string/don_t_display_the_player_rating_on" />
			<CheckBoxPreference android:key="logHideNew"
				android:title="@string/pref_log_hide_player_new"
				android:summaryOff="@string/pref_log_hide_player_new_off"
				android:summaryOn="@string/pref_log_hide_player_new_on" />
			<CheckBoxPreference android:key="logHideWin"
				android:title="@string/pref_log_hide_player_win"
				android:summaryOff="@string/pref_log_hide_player_new_off"
				android:summaryOn="@string/pref_log_hide_player_new_on" />
		</PreferenceCategory>
	</PreferenceScreen>
	<PreferenceCategory android:title="@string/pref_database">
		<com.boardgamegeek.pref.ListPreferenceMultiSelect
			android:defaultValue="own"
			android:key="syncStatuses"
			android:title="@string/pref_database_statuses"
			android:dialogTitle="@string/pref_database_statuses"
			android:entries="@array/pref_sync_status_entries"
			android:entryValues="@array/pref_sync_status_values"/>
		<CheckBoxPreference android:key="syncBuddies"
			android:defaultValue="true"
			android:title="@string/pref_database_buddies"
			android:summary="@string/pref_database_buddies_summary" />
		<com.boardgamegeek.pref.ClearDialogPreference
			android:key="clearDatabase"
			android:title="@string/pref_database_clear"
			android:summary="@string/pref_database_clear_summary"
			android:positiveButtonText="@string/pref_database_clear_pos"
			android:negativeButtonText="@string/pref_database_clear_neg" />
	</PreferenceCategory>
</PreferenceScreen>