<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/log_play"
		android:title="@string/menu_log_play"
		android:icon="@drawable/ic_menu_compose" />
	<item android:id="@+id/log_play_quick"
		android:title="@string/menu_log_play_quick"
		android:icon="@drawable/ic_menu_agenda" />
	<item android:id="@+id/refresh"
		android:title="@string/menu_refresh"
		android:icon="@drawable/ic_menu_refresh" />
	<item android:id="@+id/links"
	    android:title="@string/menu_links"
		android:icon="@android:drawable/ic_menu_more">
		<menu>
			<item android:id="@+id/menu_bgg" 
				android:title="@string/menu_link_bgg" />
			<item android:id="@+id/menu_bg_prices" 
				android:title="@string/menu_link_bg_prices" />
			<item android:id="@+id/menu_amazon" 
				android:title="@string/menu_link_amazon" />
			<item android:id="@+id/menu_ebay"
				android:title="@string/menu_link_ebay" />
		</menu>
	</item>
	<item android:id="@+id/share"
		android:title="@string/menu_share"
		android:icon="@android:drawable/ic_menu_share" />
</menu>
