<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_search"
		android:actionViewClass="com.actionbarsherlock.widget.SearchView"
		android:icon="?attr/ic_action_search"
		android:orderInCategory="0"
		android:showAsAction="always|collapseActionView"
		android:title="@string/menu_search"/>
	<item
		android:id="@+id/menu_refresh"
		android:icon="?attr/ic_action_refresh"
		android:orderInCategory="1"
		android:showAsAction="ifRoom"
		android:title="@string/home_btn_sync"/>
	<item
		android:id="@+id/menu_sign_out"
		android:orderInCategory="2"
		android:showAsAction="never"
		android:title="@string/home_btn_sign_out"/>
	<item
		android:id="@+id/menu_contact_us"
		android:icon="?attr/ic_action_send"
		android:orderInCategory="2"
		android:showAsAction="never"
		android:title="@string/home_btn_contact_us"/>
	<item
		android:id="@+id/menu_about"
		android:icon="?attr/ic_action_info"
		android:orderInCategory="2"
		android:showAsAction="never"
		android:title="@string/home_btn_about"/>

</menu>